# Muzzle

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPP_SUPPORT.md  LICENSE  Makefile  NOTICE.md  README.md  opengl-docs.ps1  todo.txt
.github/: FUNDING.yml
.github/workflows/: build_linux.yml  cmake-multi-platform.yml
Editor/core/: InitalizeImGui.h
Muzzle/core/: Applet.c  Muzzle.c
Muzzle/textures/: Sprite2D.c  Sprite3D.c
bindings/java/java/: Makefile  build_jar.ps1
bindings/java/jni/: CMakeLists.txt
bindings/java/jni/include/: common.h  dev_pikostudios_muzzle_bridge_Applet.h  dev_pikostudios_muzzle_bridge_Circle.h  dev_pikostudios_muzzle_bridge_ComputePipeline.h  dev_pikostudios_muzzle_bridge_Drawing.h  dev_pikostudios_muzzle_bridge_Font.h  dev_pikostudios_muzzle_bridge_Input.h  dev_pikostudios_muzzle_bridge_Key.h  dev_pikostudios_muzzle_bridge_Mouse.h  dev_pikostudios_muzzle_bridge_Rectangle.h  dev_pikostudios_muzzle_bridge_Shader.h  dev_pikostudios_muzzle_bridge_ShaderBuffer.h  dev_pikostudios_muzzle_bridge_ShaderPipeline.h  dev_pikostudios_muzzle_bridge_Sprite.h  dev_pikostudios_muzzle_bridge_SpriteBatch.h  dev_pikostudios_muzzle_bridge_Text.h
bindings/java/jni/src/: common.c  jni_applet.c  jni_circle.c  jni_compute_pipeline.c  jni_drawing.c  jni_font.c  jni_input.c  jni_key.c  jni_mouse.c  jni_rectangle.c  jni_shader.c  jni_shader_buffer.c  jni_shader_pipeline.c  jni_sprite.c  jni_sprite_batch.c  jni_text.c
docs/: function_pointers.md  index.rst  naming_conventions.md
examples/: README.MD
examples/Movable-Square/: CMakeLists.txt  run.ps1
examples/Movable-Square/src/: main.c
examples/Movable-character/src/: main.c
examples/background-colors/: CMakeLists.txt  main.c
examples/blank_window/: CMakeLists.txt  main.c
examples/callback_hooks/: main.c
examples/circle/: CMakeLists.txt  main.c  run.ps1
examples/collision/: main.c
examples/core/: README.MD
examples/core/blank_window/: Applet.c  CMakeLists.txt  Cmakelists.txt  Makefile  build.bat  build_run.bat  compile.bat  just_build.bat  main.c
examples/font_stress_test/: CMakeLists.txt  main.c
examples/hex_to_rgb/: main.c
examples/input/: CMakeLists.txt  main.c
examples/key_input/: CMakeLists.txt  main.c
examples/line/: CMakeLists.txt  main.c
examples/mandelbrot/: frag.glsl  main.c
examples/mouse_input/: CMakeLists.txt  main.c
examples/playing_audio/: CMakeLists.txt  main.c
examples/pong/: CMakeLists.txt  main.c  vert.glsl
examples/pong/src/: main.c
examples/read_shader_pixels/: CMakeLists.txt  main.c
examples/rectangle/: CMakeLists.txt  main.c
examples/resizing/: main.c
examples/shader_buffer/: CMakeLists.txt  frag.glsl  main.c
examples/shader_pass/: CMakeLists.txt  main.c
examples/shader_pass/shaders/: cf_frag.glsl  gs_frag.glsl  sh_frag.glsl  sh_vert.glsl
examples/shared_library/: CMakeLists.txt  main.c
examples/sprites/: CMakeLists.txt  main.c
examples/tetris/: CMakeLists.txt  block.h  main.c
examples/text/: CMakeLists.txt  lorem_ipsum.h  main.c  run.ps1
examples/text-scaling/: CMakeLists.txt  main.c
games/Platformer/src/: main.c
include/: Muzzle.h  MuzzleGL.h  MuzzleMath.h  backend.h  memory.h
include/audio/: mz_audio.h
include/collision/: mz_collision.h
include/core/: Animation.h  Applet.h  Audio.h  Batch.h  Batcher.h  CallbackHook.h  Debugger.h  Drawing.h  Error.h  Input.h  Loop.h  Memory.h  Particles.h  Scene.h  Shader.h  Sprite.h  Sprites.h  Text.h  Time.h  applet.h  callback.h  circle_renderer.h  drawing.h  font.h  logging.h  matrix.h  memory.h  quad_renderer.h  shader.h  sprite_renderer.h  text_renderer.h  tint.h  vector.h
include/core/shaders/: build.json  circle_renderer_default_fragment.glsl  circle_renderer_default_fragment.glsl.h  circle_renderer_default_vertex.glsl  circle_renderer_default_vertex.glsl.h  default_shaders.h  generate.ps1  generate.py  quad_renderer_default_fragment.glsl  quad_renderer_default_fragment.glsl.h  quad_renderer_default_vertex.glsl  quad_renderer_default_vertex.glsl.h  sprite_renderer_default_fragment.glsl.h  sprite_renderer_default_vertex.glsl  sprite_renderer_default_vertex.glsl.h  text_renderer_default_fragment.glsl  text_renderer_default_fragment.glsl.h  text_renderer_default_vertex.glsl  text_renderer_default_vertex.glsl.h
include/input/: key.h  mouse.h
include/internal/: core.callbacks.internal.h  core.default_shaders.internal.h  core.internal.h  core.texture.internal.h  globals.internal.h
include/internal/shaders/: default_quad_frag.glsl  default_quad_frag.glsl.h  default_quad_vertex.glsl  default_quad_vertex.glsl.h  generate.ps1
include/internals/: file_helper.h  gl_callbacks.h  glfw_callbacks.h  glfw_error_helper.h  hashmap.h  quad_indices.h  todo.h
include/modern_pipeline/: DefaultShaders.h  Renderer.h  Shaders.h  ShadersLoop.h
include/primitives/: circle.h  rectangle.h  sprite.h  text.h
include/shapes/: Circle.h  Cube.h  Line.h  Rectangle.h
include/textures/: Sprite2D.h  Sprite3D.h
include/utils/: sleep.h
modules/: Makefile  get_deps.py  linux_compile_deps.sh  update_all_cmakelists.ps1
plans/: README.md  plans-for-implementing-batcher.md
resources/: Makefile
src/: Animation.c  Applet.c  Audio.c  Batch.c  Batcher.c  CallbackHook.c  Circle.c  Debugger.c  Drawing.c  Error.c  Input.c  Line.c  Loop.c  Memory.c  Muzzle.c  Particles.c  Rectangle.c  Renderer.c  Shader.c  Shaders.c  ShadersLoop.c  Sprite.c  Text.c  Time.c  callback.c  memory.c  tint.c
src/core/: applet.c  circle_renderer.c  drawing.c  font.c  logging.c  memory.c  quad_renderer.c  shader.c  sprite_renderer.c  text_renderer.c
src/input/: key.c  mouse.c
src/internal/: core.callbacks.internal.c  core.default_shader.internal.c  core.default_shaders.internal.c  core.internal.c  globals.internal.c
src/internals/: file_helper.c  gl_callbacks.c  glfw_callbacks.c  glfw_error_helper.c  hashmap.c  quad_indices.c
src/primitives/: circle.c  rectangle.c  sprite.c  text.c
src/utils/: sleep.c
swig/: includes.i  muzzle.i
template/: CMakeLists.txt  main.c
(+27 files in other folders)
